attempt fix on audio controls not showing up, loading removed

--- a/client2/src/index.css
+++ b/client2/src/index.css
@@ -290,7 +290,7 @@ body {
 
 /*--Audio Player--*/
 .bottomBar {
-  opacity: 30%;
+  opacity: 100%;
   transition: 0.2s;
 }
 
